--- a/spring/src/main/resources/static/index.html
+++ b/spring/src/main/resources/static/index.html
@@ -13,6 +13,8 @@
         <img src="https://avatars0.githubusercontent.com/u/28046784?s=200&v=4">
         <br/>
         <a href="/login/google">[Login with Google]</a>
+        <br/>
+        <a href="/login/authServer">[Login with AuthServer]</a>
         <div id="user-details" class="container"></div>
     </div>
 </div>
