fix auth-server integration with client

--- a/spring/src/main/resources/static/index.html
+++ b/spring/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
         <br/>
         <a href="/login/google">[Login with Google]</a>
         <br/>
-        <a href="/login/authServer">[Login with AuthServer]</a>
+        <a href="/login/auth-server">[Login with AuthServer]</a>
         <div id="user-details" class="container"></div>
     </div>
 </div>
